--- a/.github/workflows/remind.yml
+++ b/.github/workflows/remind.yml
@@ -1,8 +1,8 @@
-name: Heroku Awake
+name: Render Awake
 
 on:
   schedule:
-    - cron: "*/25 * * * *"
+    - cron: "*/13 * * * *"
 
 jobs:
   build:
