feat: Add environment configuration management
- Create ENV_CONFIG for centralized environment variable management
- Add dynamic Teams manifest generation with template variables
- Update render.yaml with all required environment variables
- Add manifest generator utility for dynamic configuration
- Update server startup to generate Teams manifest automatically
- Make all server URLs configurable via environment variables

--- a/render.yaml
+++ b/render.yaml
@@ -9,8 +9,14 @@ services:
         value: production
       - key: PORT
         value: 10000
+      - key: SERVER_URL
+        value: https://maechu-v2-whmc.onrender.com
       - key: NAVER_MAP_FOLDER_ID
         sync: false  # 수동으로 설정해야 함
+      - key: TEAMS_BOT_ID
+        value: lunch-recommend-bot-v2
+      - key: TEAMS_APP_PACKAGE
+        value: com.maechu.lunchbot
 
   - type: cron
     name: fetch-menus
@@ -19,5 +25,11 @@ services:
     schedule: "0 9 * * *"  # 매일 오전 9시
     startCommand: npm run fetch-menus
     envVars:
+      - key: SERVER_URL
+        value: https://maechu-v2-whmc.onrender.com
       - key: NAVER_MAP_FOLDER_ID
-        sync: false  # 수동으로 설정해야 함 
+        sync: false  # 수동으로 설정해야 함
+      - key: TEAMS_BOT_ID
+        value: lunch-recommend-bot-v2
+      - key: TEAMS_APP_PACKAGE
+        value: com.maechu.lunchbot 
