--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/rate-limit": "^10.2.1",
+    "@fastify/static": "^8.0.1",
     "dotenv": "^16.4.5",
     "fastify": "^5.1.0",
     "undici": "^6.21.0"
