--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "맛추 v2 - 점심 메뉴 추천",
-  "short_name": "맛추 v2",
+  "name": "제2판교 식권대장 밥집",
+  "short_name": "식권대장",
   "description": "네이버 지도 기반 점심 메뉴 추천 서비스",
   "start_url": "/web",
   "display": "standalone",
@@ -57,11 +57,11 @@
   ],
   "screenshots": [
     {
-      "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 390 844'><rect width='390' height='844' fill='%23667eea'/><text x='195' y='400' font-size='40' text-anchor='middle' fill='white'>맛추 v2</text><text x='195' y='450' font-size='20' text-anchor='middle' fill='white'>점심 메뉴 추천 서비스</text></svg>",
+      "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 390 844'><rect width='390' height='844' fill='%23667eea'/><text x='195' y='400' font-size='40' text-anchor='middle' fill='white'>제2판교 식권대장</text><text x='195' y='450' font-size='20' text-anchor='middle' fill='white'>점심 메뉴 추천 서비스</text></svg>",
       "sizes": "390x844",
       "type": "image/svg+xml",
       "form_factor": "narrow",
-      "label": "맛추 v2 메인 화면"
+      "label": "제2판교 식권대장 메인 화면"
     }
   ],
   "categories": ["food", "lifestyle", "utilities"],
