--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
+PORT=10000
+SERVER_URL=https://maechu-v2.onrender.com
 NAVER_MAP_FOLDER_ID=a359f1dce0ee48d2bf0e378a70275aba
-PORT=4885
-SERVER_URL=https://maechu-v2-whmc.onrender.com
