feat: fetch latest menu before sending notification in ci

--- a/.github/workflows/lunch-notification.yml
+++ b/.github/workflows/lunch-notification.yml
@@ -18,5 +18,8 @@ jobs:
         with:
           node-version: '18'
 
+      - name: Fetch Latest Menu
+        run: npm run fetch-menus
+
       - name: Send Teams Notification
         run: node scripts/notify-teams.js
